fix table invisible

--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -994,3 +994,21 @@ i {
     padding-left: 0;
   }
 }
+
+
+table {
+  border: 1px solid #666;
+  border-collapse: collapse;
+  tr, td {
+    border: 1px solid #666;
+  }
+  tr:nth-child(even) {
+    background: #CCC
+  }
+  tr:nth-child(odd) {
+    background-color: #FAFAFA;
+  }
+  td:hover {
+    background-color: #E6FBFF;
+  }
+}
